[package]
name = "hipcheck"
description = """
Automatically assess and score software packages for supply chain risk.
"""
keywords = ["security", "sbom"]
categories = ["command-line-utilities", "development-tools"]
readme = "../README.md"
version = "3.14.0"
edition = "2024"
license = "Apache-2.0"
homepage = "https://hipcheck.mitre.org"
repository = "https://github.com/mitre/hipcheck"
include = ["src/**", "../LICENSE", "../README.md", "build.rs", "proto/**"]
publish = false

# Rename the binary from the default "hipcheck" (based on the package name)
# to "hc".
[[bin]]
name = "hc"
path = "src/main.rs"

[features]

# Print timings feature is used to print timing information throughout
# Hipcheck's runtime.
print-timings = ["benchmarking"]

# Benchmarking enables the benchmarking module, containing special utilities
# for benchmarking.
benchmarking = []

[dependencies]

async-channel = { workspace = true }
async-stream = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
cyclonedx-bom = { workspace = true }
dotenv = { workspace = true }
chrono = { workspace = true, features = ["alloc", "serde"] }
clap = { workspace = true, features = ["derive"] }
console = { workspace = true, features = ["windows-console-colors"] }
dialoguer = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
flate2 = { workspace = true }
fs_extra = { workspace = true }
futures = { workspace = true }
# Vendor libgit2 and openssl so that they will be statically included
# and not cause problems on certain systems that might not have one or
# the other.
git2 = { workspace = true, features = ["vendored-libgit2", "vendored-openssl"] }
# Include with both a `path` and `version` reference.
# Local builds will use the `path` dependency, which may be a newer
# version than the one published to Crates.io.
# People building from Crates.io will use the published version.
#
# See: https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#multiple-locations
hipcheck-kdl = { workspace = true }
hipcheck-macros = { workspace = true }
http = { workspace = true }
indextree = { workspace = true }
indicatif = { workspace = true, features = ["rayon"] }
itertools = { workspace = true }
jiff = { workspace = true }
log = { workspace = true }
logos = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
minijinja = { workspace = true }
minijinja-contrib = { workspace = true, features = ["datetime"] }
nom = { workspace = true }
num-traits = { workspace = true }
ordered-float = { workspace = true, features = ["serde"] }
packageurl = { workspace = true }
pathbuf = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
# Exactly matching the version of rustls used by ureq
# Get rid of default features since we don't use the AWS backed crypto
# provider (we use ring) and it breaks stuff on windows.
rustls = { workspace = true, features = ["logging", "std", "tls12", "ring"] }
rustls-platform-verifier = { workspace = true }
salsa = { workspace = true }
schemars = { workspace = true, features = [
    "derive",
    "preserve_order",
    "chrono",
    "url",
] }
semver = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
sha256 = { workspace = true }
smart-default = { workspace = true }
spdx-rs = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tabled = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "process",
    "fs",
] }
tokio-stream = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true, features = ["json", "tls"] }
url = { workspace = true, features = ["serde"] }
walkdir = { workspace = true }
which = { workspace = true }
xml-rs = { workspace = true }
xz2 = { workspace = true }
zip = { workspace = true }
zstd = { workspace = true }
hipcheck-common = { workspace = true, features = ["rfd9-compat"] }
serde_with = { workspace = true }
gomod-rs = { workspace = true }
hipcheck-workspace-hack = { workspace = true }

[build-dependencies]

anyhow = { workspace = true }
pathbuf = { workspace = true }
schemars = { workspace = true, features = ["chrono", "url"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
url = { workspace = true, features = ["serde"] }
which = { workspace = true }

[dev-dependencies]

dirs = { workspace = true }
test-log = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["xml-rs"]
