[package]
name = "xtask"
description = "Hipcheck development task runner."
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
# This ensures we do not publish this to Crates.io, and that
# 'dist' doesn't try to create any releases of this, since it's just
# internal tooling.
publish = false

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["cargo", "derive"] }
clap-verbosity-flag = "3.0.2"
env_logger = "0.11.6"
log = "0.4.25"
glob = "0.3.2"
pathbuf = "1.0.0"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"
xshell = "0.2.7"
which = "7.0.2"
convert_case = "0.7.1"
serde_json = "1.0.134"
url = { version = "2.5.4", features = ["serde"] }
kdl = "4.7.0"
regex = "1.11.1"
ureq = { version = "2.10.1", default-features = false, features = [
    "json",
    "tls",
] }
# Exactly matching the version of rustls used by ureq
# Get rid of default features since we don't use the AWS backed crypto
# provider (we use ring) and it breaks stuff on windows.
rustls = { version = "0.23.10", default-features = false, features = [
    "logging",
    "std",
    "tls12",
    "ring",
] }
rustls-native-certs = "0.8.0"
