[package]
name = "xtask"
description = "Hipcheck development task runner."
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"
# This ensures we do not publish this to Crates.io, and that
# 'dist' doesn't try to create any releases of this, since it's just
# internal tooling.
publish = false

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.32", features = ["cargo", "derive", "string"] }
clap-verbosity-flag = "3.0.2"
env_logger = "0.11.6"
log = "0.4.27"
glob = "0.3.2"
pathbuf = "1.0.0"
pep440_rs = "0.7.3"
pyproject-toml = "0.13.4"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
xshell = "0.2.7"
which = "7.0.2"
convert_case = "0.7.1"
serde_json = "1.0.140"
url = { version = "2.5.4", features = ["serde"] }
kdl = "4.7.0"
regex = "1.11.1"
ureq = { version = "2.10.1", default-features = false, features = [
    "json",
    "tls",
] }
# Exactly matching the version of rustls used by ureq
# Get rid of default features since we don't use the AWS backed crypto
# provider (we use ring) and it breaks stuff on windows.
rustls = { version = "0.23.10", default-features = false, features = [
    "logging",
    "std",
    "tls12",
    "ring",
] }
rustls-platform-verifier = "0.5.0"
itertools = "0.14.0"
csv = "1.3.1"
jiff = { version = "0.2.5", default-features = false, features = [
    "alloc",
    "serde",
    "std",
] }
hipcheck-workspace-hack = { version = "0.1", path = "../library/hipcheck-workspace-hack" }
