[package]
name = "xtask"
description = "Hipcheck development task runner."
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"
# This ensures we do not publish this to Crates.io, and that
# 'dist' doesn't try to create any releases of this, since it's just
# internal tooling.
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive", "string"] }
clap-verbosity-flag = { workspace = true }
convert_case = { workspace = true }
csv = { workspace = true }
env_logger = { workspace = true }
glob = { workspace = true }
itertools = { workspace = true }
jiff = { workspace = true, features = ["alloc", "serde", "std"] }
kdl = "4.7.0"
log = { workspace = true }
pathbuf = { workspace = true }
pep440_rs = { workspace = true }
pyproject-toml = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
# Exactly matching the version of rustls used by ureq
# Get rid of default features since we don't use the AWS backed crypto
# provider (we use ring) and it breaks stuff on windows.
rustls = { workspace = true, features = ["logging", "std", "tls12", "ring"] }
rustls-platform-verifier = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true, features = ["json", "tls"] }
url = { workspace = true, features = ["serde"] }
which = { workspace = true }
xshell = { workspace = true }
