[package]
name = "hc_analysis"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
content_inspector = "0.2.4"
dirs = "5.0.1"
dotenv = "0.15.0"
curl = "0.4.38"
glob = "0.3.0"
hc_common = { path = "../hc_common" }
hc_data = { path = "../hc_data" }
hc_shell = { path = "../hc_shell" }
maplit = "1.0.2"
petgraph = { version = "0.6.0" }
serde = { version = "1.0.200", features = ["derive", "rc"] }
serde_derive = "1.0.137"
spdx-rs = "0.5.0"
toml = "0.8.12"
unicode-normalization = "0.1.19"
unicode-segmentation = "1.9.0"
ureq = { version = "2.9.7", features = ["json"] }
walkdir = "2"
xml-rs = "0.8"

[dev_dependencies]
tempfile = "3.10.1"
