[package]
name = "hc_common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
hc_serde = { path = "../hc_serde" }
lazy_static = "1.4.0"
log = "0.4.16"
once_cell = "1.10.0"
ordered-float = { version = "4.2.0", features = ["serde"] }
regex = "1.5.5"
salsa = "0.16.1"
schemars = { version  = "0.8.8", default-features = false, features = ["derive", "preserve_order", "chrono" ] }
semver = "1.0.9"
serde_json = "1.0.80"
url = "2.2.2"
which = { version = "6.0.1", default-features = false }
