[package]
name = "hc_common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4.16"
once_cell = "1.10.0"
ordered-float = { version = "4.2.0", features = ["serde"] }
paste = "1.0.7"
regex = "1.5.5"
salsa = "0.16.1"
schemars = { version = "0.8.17", default-features = false, features = [
    "derive",
    "preserve_order",
    "chrono",
] }
semver = "1.0.9"
serde = { version = "1.0.200", features = ["derive", "rc"] }
serde_json = "1.0.80"
smart-default = "0.7.1"
toml = "0.8.12"
url = "2.2.2"
which = { version = "6.0.1", default-features = false }
libc = "0.2.154"
termcolor = "1.1.3"
duct = "0.13.5"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["handleapi", "processenv", "winbase", "wincon", "winnt"]

[build-dependencies]
anyhow = "1.0.83"
which = { version = "6.0.1", default-features = false }
