[package]
name = "hc_data"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
dirs = "5.0.1"
graphql_client = "0.14.0"
hc_common = { path = "../hc_common" }
hc_config = { path = "../hc_config" }
hc_git_command = { path = "../hc_git_command" }
hc_hash = { path = "../hc_hash" }
hc_shell = { path = "../hc_shell" }
hc_version = { path = "../hc_version" }
nom = "7.1.3"
petgraph = { version = "0.6.0", features = ["serde-1"] }
serde = { path = "../hc_serde", package = "hc_serde" }
ureq = { version = "2.9.7", default-features = false, features = ["json", "native-tls"] }

[dev-dependencies]
dirs = "5.0.1"
