[package]
name = "hc_github"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
hc_common = { path = "../hc_common" }
hc_git = { path = "../hc_git" }
# Alias supports graphql_client derive macros
serde = { path = "../hc_serde", package = "hc_serde" }
graphql_client = "0.14.0"
ureq = { version = "2.9.7", default-features = false, features = ["json", "native-tls"] }
