[package]
name = "hc_pm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
hc_common = { path = "../hc_common" }
hc_serde = { path = "../hc_serde" }
clap = { version = "2.33.3", default-features = false}
glob = "0.3.0"
toml = "0.5.9"
reqwest = "0.11.4"
serde_derive = "1.0.137"
curl = "0.4.38"
http = "0.2.7"
ureq = { version = "2.1.1", features = ["json"] }
xml-rs = "0.8"
