[package]
name = "hc_pm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
hc_common = { path = "../hc_common" }
hc_error = { path = "../hc_error" }
hc_serde = { path = "../hc_serde" }
glob = "0.3.0"
toml = "0.8.12"
serde_derive = "1.0.137"
curl = "0.4.38"
ureq = { version = "2.9.7", features = ["json"] }
xml-rs = "0.8"
