[package]
name = "hc_score"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
hc_analysis = { path = "../hc_analysis" }
hc_common = { path = "../hc_common" }
hc_config = { path = "../hc_config" }
hc_shell = { path = "../hc_shell" }
petgraph = { version = "0.6.0" }