[package]
name = "hc_session"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
dirs = "4.0.0"
dotenv = "0.15.0"
hc_analysis = { path = "../hc_analysis" }
hc_binary = { path = "../hc_binary" }
hc_command_util = { path = "../hc_command_util" }
hc_common = { path = "../hc_common" }
hc_config = { path = "../hc_config" }
hc_data = { path = "../hc_data" }
hc_error = { path = "../hc_error" }
hc_eslint = { path = "../hc_eslint" }
hc_filesystem = { path = "../hc_filesystem" }
hc_git = { path = "../hc_git" }
hc_linguist = { path = "../hc_linguist" }
hc_metric = { path = "../hc_metric" }
hc_npm = { path = "../hc_npm" }
hc_pathbuf = { path = "../hc_pathbuf" }
hc_pm = { path = "../hc_pm" }
hc_report = { path = "../hc_report" }
hc_score = { path = "../hc_score" }
hc_shell = { path = "../hc_shell" }
hc_source = { path = "../hc_source" }
hc_spdx = { path = "../hc_spdx" }
hc_version = { path = "../hc_version" }

[dev_dependencies]
hc_test_util = { path = "../hc_test_util" }
tempdir = "0.3.7"
