[package]
name = "hc_session"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
dirs = "5.0.1"
dotenv = "0.15.0"
hc_analysis = { path = "../hc_analysis" }
hc_binary = { path = "../hc_binary" }
hc_common = { path = "../hc_common" }
hc_config = { path = "../hc_config" }
hc_data = { path = "../hc_data" }
hc_linguist = { path = "../hc_linguist" }
hc_metric = { path = "../hc_metric" }
hc_pm = { path = "../hc_pm" }
hc_report = { path = "../hc_report" }
hc_score = { path = "../hc_score" }
hc_shell = { path = "../hc_shell" }
hc_spdx = { path = "../hc_spdx" }
hc_version = { path = "../hc_version" }

[dev_dependencies]
tempfile = "3.10.1"
