[package]
name = "hc_shell"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
atty = "0.2.14"
duct = "0.13.5"
hc_common = { path = "../hc_common" }
hc_error = { path = "../hc_error" }
hc_report = { path = "../hc_report" }
libc = "0.2.125"
termcolor = "1.1.3"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
  "handleapi",
  "processenv",
  "winbase",
  "wincon",
  "winnt",
]
