[package]
name = "hc_source"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
hc_common = { path = "../hc_common" }
hc_error = { path = "../hc_error" }
hc_git_command = { path = "../hc_git_command" }
hc_hash = { path = "../hc_hash" }
hc_pathbuf = { path = "../hc_pathbuf" }
hc_shell = { path = "../hc_shell" }

