[package]
name = "hc_version"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
build = "src/build.rs"

[dependencies]
hc_common = { path = "../hc_common" }
hc_command_util = { path = "../hc_command_util" }
hc_error = { path = "../hc_error" }

[build-dependencies]
hc_common = { path = "../hc_common" }
hc_command_util = { path = "../hc_command_util" }
hc_error = { path = "../hc_error" }