[package]
name = "activity"
version = "0.5.2"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/mitre/hipcheck"
publish = false

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
hipcheck-sdk = { version = "0.6.1", path = "../../sdk/rust", features = [
    "macros",
] }
jiff = { version = "0.1.16", features = ["serde"] }
tracing = "0.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt"] }
hipcheck-workspace-hack = { version = "0.1", path = "../../library/hipcheck-workspace-hack" }

[dev-dependencies]
hipcheck-sdk = { version = "0.6.1", path = "../../sdk/rust", features = [
    "mock_engine",
] }
