[package]
name = "activity"
version = "0.5.2"
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/mitre/hipcheck"
publish = false

[dependencies]
clap = { workspace = true, features = ["derive"] }
hipcheck-sdk = { workspace = true, features = ["macros"] }
jiff = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
hipcheck-workspace-hack = { workspace = true }

[dev-dependencies]
hipcheck-sdk = { workspace = true, features = ["mock_engine"] }
