[package]
name = "affiliation"
version = "0.5.2"
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/mitre/hipcheck"
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
hipcheck-kdl = { workspace = true }
hipcheck-sdk = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
pathbuf = { workspace = true }
schemars = { workspace = true, features = ["url"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt"] }
hipcheck-workspace-hack = { workspace = true }

[dev-dependencies]
hipcheck-sdk = { workspace = true, features = ["macros", "mock_engine"] }
