[package]
name = "binary"
version = "0.3.1"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/mitre/hipcheck"
publish = false

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
content_inspector = "0.2.4"
hipcheck-kdl = { version = "0.1.0", path = "../../hipcheck-kdl" }
hipcheck-sdk = { version = "0.4.0", path = "../../sdk/rust", features = [
    "macros",
] }
log = "0.4.25"
miette = { version = "7.4.0", features = ["fancy"] }
pathbuf = "1.0.0"
schemars = "0.8.21"
serde = "1.0.217"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["rt"] }
walkdir = "2.5.0"

[dev-dependencies]
hipcheck-sdk = { version = "0.4.0", path = "../../sdk/rust", features = [
    "mock_engine",
] }
