[package]
name = "binary"
version = "0.4.2"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/mitre/hipcheck"
publish = false

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
content_inspector = "0.2.4"
hipcheck-kdl = { version = "0.1.0", path = "../../library/hipcheck-kdl" }
hipcheck-sdk = { version = "0.6.1", path = "../../sdk/rust", features = [
    "macros",
] }
tracing = "0.1"
miette = { version = "7.4.0", features = ["fancy"] }
pathbuf = "1.0.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt"] }
walkdir = "2.5.0"
hipcheck-workspace-hack = { version = "0.1", path = "../../library/hipcheck-workspace-hack" }

[dev-dependencies]
hipcheck-sdk = { version = "0.6.1", path = "../../sdk/rust", features = [
    "mock_engine",
] }
