[package]
name = "binary"
version = "0.4.2"
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/mitre/hipcheck"
publish = false

[dependencies]
clap = { workspace = true, features = ["derive"] }
content_inspector = { workspace = true }
hipcheck-kdl = { workspace = true }
hipcheck-sdk = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
pathbuf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
walkdir = { workspace = true }
hipcheck-workspace-hack = { workspace = true }

[dev-dependencies]
hipcheck-sdk = { workspace = true, features = ["mock_engine"] }
