[package]
name = "churn"
version = "0.4.1"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/mitre/hipcheck"
publish = false

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
hipcheck-sdk = { version = "0.4.0", path = "../../sdk/rust", features = [
    "macros",
] }
log = "0.4.25"
schemars = "0.8.21"
serde = "1.0.217"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["rt"] }

[dev-dependencies]
hipcheck-sdk = { version = "0.4.0", path = "../../sdk/rust", features = [
    "mock_engine",
] }
