[package]
name = "churn"
version = "0.5.2"
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/mitre/hipcheck"
publish = false

[dependencies]
clap = { workspace = true, features = ["derive"] }
hipcheck-sdk = { version = "0.6.1", path = "../../sdk/rust", features = [
    "macros",
] }
tracing = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
hipcheck-workspace-hack = { workspace = true }

[dev-dependencies]
hipcheck-sdk = { version = "0.6.1", path = "../../sdk/rust", features = [
    "mock_engine",
] }
