[package]
name = "dummy_rand_data"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
futures = "0.3.30"
indexmap = "2.4.0"
prost = "0.13.1"
rand = "0.8.5"
serde_json = "1.0.125"
tokio = { version = "1.39.2", features = ["rt"] }
tokio-stream = "0.1.15"
tonic = "0.12.2"

[build-dependencies]
anyhow = "1.0.86"
tonic-build = "0.12.1"
