[package]
name = "dummy_rand_data"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
futures = "0.3.30"
indexmap = "2.5.0"
prost = "0.13.3"
rand = "0.8.5"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt"] }
tokio-stream = "0.1.16"
tonic = "0.12.2"

[build-dependencies]
anyhow = "1.0.89"
tonic-build = "0.12.2"
