[package]
name = "dummy_rand_data_sdk"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.87"
clap = { version = "4.5.16", features = ["derive"] }
hipcheck-sdk = { path = "../../sdk/rust" }
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["rt"] }
