[package]
name = "dummy_sha256"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
indexmap = "2.4.0"
futures = "0.3.30"
prost = "0.13.2"
rand = "0.8.5"
serde_json = "1.0.125"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["rt"] }
tokio-stream = "0.1.15"
tonic = "0.12.2"

[build-dependencies]
anyhow = "1.0.86"
tonic-build = "0.12.1"
