[package]
name = "entropy"
version = "0.5.0"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/mitre/hipcheck"
publish = false

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
dashmap = { version = "6.1.0", features = ["inline", "rayon"] }
finl_unicode = { version = "1.3.0", features = ["grapheme_clusters"] }
hipcheck-sdk = { version = "0.5.0", path = "../../sdk/rust", features = [
    "macros",
] }
rayon = "1.10.0"
schemars = "0.8.22"
serde = "1.0.219"
serde_json = "1.0.139"
tracing = "0.1"
tokio = { version = "1.44.0", features = ["rt"] }
unicode-normalization = "0.1.24"
hipcheck-workspace-hack = { version = "0.1", path = "../../library/hipcheck-workspace-hack" }

[dev-dependencies]
hipcheck-sdk = { version = "0.5.0", path = "../../sdk/rust", features = [
    "macros",
    "mock_engine",
] }
