[package]
name = "entropy"
version = "0.5.2"
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/mitre/hipcheck"
publish = false

[dependencies]
clap = { workspace = true, features = ["derive"] }
dashmap = { workspace = true, features = ["inline", "rayon"] }
finl_unicode = { workspace = true, features = ["grapheme_clusters"] }
hipcheck-sdk = { version = "0.6.1", path = "../../sdk/rust", features = [
    "macros",
] }
rayon = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
unicode-normalization = { workspace = true }
hipcheck-workspace-hack = { workspace = true }

[dev-dependencies]
hipcheck-sdk = { version = "0.6.1", path = "../../sdk/rust", features = [
    "macros",
    "mock_engine",
] }
