[package]
name = "fuzz"
version = "0.3.0"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/mitre/hipcheck"
publish = false

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
hipcheck-sdk = { version = "0.5.0", path = "../../sdk/rust", features = [
    "macros",
] }
serde_json = "1.0.139"
tokio = { version = "1.44.0", features = ["rt"] }
hipcheck-workspace-hack = { version = "0.1", path = "../../library/hipcheck-workspace-hack" }

[dev-dependencies]
hipcheck-sdk = { version = "0.5.0", path = "../../sdk/rust", features = [
    "macros",
    "mock_engine",
] }
