[package]
name = "fuzz"
version = "0.3.2"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/mitre/hipcheck"
publish = false

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
hipcheck-sdk = { version = "0.6.1", path = "../../sdk/rust", features = [
    "macros",
] }
serde_json = "1.0.140"
tracing = "0.1"
tokio = { version = "1.45.0", features = ["rt"] }
hipcheck-workspace-hack = { version = "0.1", path = "../../library/hipcheck-workspace-hack" }

[dev-dependencies]
hipcheck-sdk = { version = "0.6.1", path = "../../sdk/rust", features = [
    "macros",
    "mock_engine",
] }
