[package]
name = "fuzz"
version = "0.3.2"
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/mitre/hipcheck"
publish = false

[dependencies]
clap = { workspace = true, features = ["derive"] }
hipcheck-sdk = { workspace = true, features = ["macros"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
hipcheck-workspace-hack = { workspace = true }

[dev-dependencies]
hipcheck-sdk = { workspace = true, features = ["macros", "mock_engine"] }
